Fix conference banner margin on mobiles

--- a/_less/screen.less
+++ b/_less/screen.less
@@ -669,6 +669,6 @@ li{
 	.conferencebanner{
 		position:static;
 		display:inline-block;
-		margin:0px 0px 10px 0px;
+		margin:0px 0px 10px -5px;
 	}
 }
